--- a/GccApplication2/Debug/Makefile
+++ b/GccApplication2/Debug/Makefile
@@ -44,6 +44,7 @@ C_SRCS +=  \
 ../pushButton.c \
 ../sevenSeg.c \
 ../softwareDelay.c \
+../SwICU.c \
 ../timers.c
 
 
@@ -61,6 +62,7 @@ main.o \
 pushButton.o \
 sevenSeg.o \
 softwareDelay.o \
+SwICU.o \
 timers.o
 
 OBJS_AS_ARGS +=  \
@@ -71,6 +73,7 @@ main.o \
 pushButton.o \
 sevenSeg.o \
 softwareDelay.o \
+SwICU.o \
 timers.o
 
 C_DEPS +=  \
@@ -81,6 +84,7 @@ main.d \
 pushButton.d \
 sevenSeg.d \
 softwareDelay.d \
+SwICU.d \
 timers.d
 
 C_DEPS_AS_ARGS +=  \
@@ -91,6 +95,7 @@ main.d \
 pushButton.d \
 sevenSeg.d \
 softwareDelay.d \
+SwICU.d \
 timers.d
 
 OUTPUT_FILE_PATH +=GccApplication2.elf
@@ -150,6 +155,13 @@ LINKER_SCRIPT_DEP+=
 	
 
 ./softwareDelay.o: .././softwareDelay.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.3.300\include"  -O0 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.3.300\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./SwICU.o: .././SwICU.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.3.300\include"  -O0 -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega32 -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.3.300\gcc\dev\atmega32" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
